Bug 196615 - Calendar crashes when exporting to web page
Summary: Calendar crashes when exporting to web page
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-15 14:46 UTC by greatbunzinni
Modified: 2009-06-17 12:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description greatbunzinni 2009-06-15 14:46:40 UTC
Version:            (using KDE 4.2.4)
Installed from:    Ubuntu Packages

I have a set of events in calendar. When I try to export them to HTML and all options are enabled in the export dialog box, calendar crashes. 

The crash backtrace is as follows:

Application: Kontact (kontact), signal SIGSEGV
0x00007ffad495bd21 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 15980)]

Thread 2 (Thread 0x7ffaba491950 (LWP 15981)):
#0  0x00007ffad1d0a56d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007ffad543d917 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007ffad5433409 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007ffad543c952 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007ffad1d063ba in start_thread () from /lib/libpthread.so.0
#5  0x00007ffad4999fcd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ffadadf9750 (LWP 15980)):
[KCrash Handler]
#5  0x00007ffad8acfbd0 in KABC::Addressee::Addressee () from /usr/lib/libkabc.so.4
#6  0x00007ffad8e03685 in KCal::HtmlExport::formatAttendees () from /usr/lib/libkcal.so.4
#7  0x00007ffad8e03eca in KCal::HtmlExport::createEvent () from /usr/lib/libkcal.so.4
#8  0x00007ffad8e048b6 in KCal::HtmlExport::createMonthView () from /usr/lib/libkcal.so.4
#9  0x00007ffad8e085eb in KCal::HtmlExport::save () from /usr/lib/libkcal.so.4
#10 0x00007ffad8e0879e in KCal::HtmlExport::save () from /usr/lib/libkcal.so.4
#11 0x00007ffab8953c05 in ActionManager::exportHTML () from /usr/lib/libkorganizerprivate.so.4
#12 0x00007ffab8960e71 in ActionManager::qt_metacall () from /usr/lib/libkorganizerprivate.so.4
#13 0x00007ffad553b1f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#14 0x00007ffab88e4162 in CalendarView::exportHTML () from /usr/lib/libkorganizerprivate.so.4
#15 0x00007ffab88f44d7 in CalendarView::qt_metacall () from /usr/lib/libkorganizerprivate.so.4
#16 0x00007ffad553b1f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#17 0x00007ffab8979562 in ?? () from /usr/lib/libkorganizerprivate.so.4
#18 0x00007ffab89795b5 in ?? () from /usr/lib/libkorganizerprivate.so.4
#19 0x00007ffab897a310 in ?? () from /usr/lib/libkorganizerprivate.so.4
#20 0x00007ffad553b1f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#21 0x00007ffad7474d9d in KDialog::slotButtonClicked () from /usr/lib/libkdeui.so.5
#22 0x00007ffad747629d in KDialog::qt_metacall () from /usr/lib/libkdeui.so.5
#23 0x00007ffad752ba16 in KPageDialog::qt_metacall () from /usr/lib/libkdeui.so.5
#24 0x00007ffab897a295 in ?? () from /usr/lib/libkorganizerprivate.so.4
#25 0x00007ffad553b1f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#26 0x00007ffad553e01e in QSignalMapper::mapped () from /usr/lib/libQtCore.so.4
#27 0x00007ffad553e8c0 in QSignalMapper::map () from /usr/lib/libQtCore.so.4
#28 0x00007ffad553f4b0 in QSignalMapper::qt_metacall () from /usr/lib/libQtCore.so.4
#29 0x00007ffad553b1f2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#30 0x00007ffad6710267 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#31 0x00007ffad646ddeb in ?? () from /usr/lib/libQtGui.so.4
#32 0x00007ffad646fa52 in ?? () from /usr/lib/libQtGui.so.4
#33 0x00007ffad646fca5 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#34 0x00007ffad611c8cf in QWidget::event () from /usr/lib/libQtGui.so.4
#35 0x00007ffad60cb78d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#36 0x00007ffad60d40da in QApplication::notify () from /usr/lib/libQtGui.so.4
#37 0x00007ffad750084b in KApplication::notify () from /usr/lib/libkdeui.so.5
#38 0x00007ffad552575c in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#39 0x00007ffad60d3328 in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#40 0x00007ffad613ce19 in ?? () from /usr/lib/libQtGui.so.4
#41 0x00007ffad613ba88 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#42 0x00007ffad6164464 in ?? () from /usr/lib/libQtGui.so.4
#43 0x00007ffacec6c20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#44 0x00007ffacec6f8e0 in ?? () from /usr/lib/libglib-2.0.so.0
#45 0x00007ffacec6fa7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#46 0x00007ffad554ee6f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#47 0x00007ffad6163bef in ?? () from /usr/lib/libQtGui.so.4
#48 0x00007ffad5524002 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#49 0x00007ffad55243cd in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#50 0x00007ffad5526694 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#51 0x0000000000404a15 in _start ()
Comment 1 Christophe Marin 2009-06-15 14:52:09 UTC
Unfortunately, the backtrace is not useful. If you can reproduce this bug, please install the debug package for kdepim and kdepimlibs and paste a better one. 
More informations on this page: http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
Comment 2 Allen Winter 2009-06-16 02:28:45 UTC
SVN commit 982495 by winterz:

fix a crash when exporting addresses to the html

MERGE: e4
BUG: 196615


 M  +8 -6      htmlexport.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=982495
Comment 3 Thomas McGuire 2009-06-17 12:26:36 UTC
SVN commit 982951 by tmcguire:

Crossport r982495 by winterz from trunk to the enterprise4 branch:

fix a crash when exporting addresses to the html

MERGE: e4
CCBUG: 196615



 M  +8 -6      htmlexport.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=982951