fix a crash when exporting addresses to the html

MERGE: e4
BUG: 196615

svn path=/trunk/KDE/kdepimlibs/; revision=982495